# func-to-script

./: .gitattributes  .gitignore  LICENSE.txt  MANIFEST.in  PUBLISHING.md  README.md  greeter.py  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: release.yaml
examples/: greeter.py  say_hello_script.py
func_to_script/: __init__.py  _version.py  config_loader.py  core.py
test/: test_config_loader.py  test_core.py
test/scripts/: script_no_defaults.py  script_with_defaults.py  script_with_incorrect_type.py  script_with_missing_types.py
